# study-multithreading

./: CCCCUUUDDDAA.sln
CCCCUUUDDDAA/: CCCCUUUDDDAA.vcxproj  CCCCUUUDDDAA.vcxproj.filters  CMakeLists.txt  file.txt  lr.cu
CCCCUUUDDDAA/Debug/: lr.cu-1674227538.deps  lr.cu.cache
CCCCUUUDDDAA/Debug/CCCCUUUDDDAA.tlog/: CCCCUUUDDDAA.lastbuildstate  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog
CCCCUUUDDDAA/x64/Release/: lr.cu.cache
CCCCUUUDDDAA/x64/Release/CCCCUUUDDDAA.tlog/: CCCCUUUDDDAA.lastbuildstate  CudaCompile.read.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
